add new options for flatten indentation to allow for 1,2 or 3 levels of de-indent on top of removing all indentation. #2

--- a/src/styles.css
+++ b/src/styles.css
@@ -128,3 +128,11 @@ div.about {
 .setting.two label.toggle-on-click:after {
   content: " 2️⃣";
 }
+
+.setting.three label.toggle-on-click:after {
+  content: " 3️⃣";
+}
+
+.setting.all label.toggle-on-click:after {
+  content: " *️⃣";
+}
