added new option to remove namespaces updated css of output to word wrap. updated version at the bottom. 20200705-01

--- a/src/styles.css
+++ b/src/styles.css
@@ -84,7 +84,7 @@ a:hover {
   background-color: #eaeaea;
   color: black;
   overflow-x:scroll ; overflow-y: scroll;
-  white-space: nowrap;
+  white-space: break-spaces;
 }
 
 .setting {
